--- a/Labs/Lab 2/Lab 2 - In class.Rmd
+++ b/Labs/Lab 2/Lab 2 - In class.Rmd
@@ -5,7 +5,7 @@ date: "2023-06-19"
 author: "Kyle L. Wilson"
 ---
 
-```{r setup, include=FALSE}
+```{r setup}
 knitr::opts_chunk$set(echo = TRUE)
 library(tidyr)
 library(ggplot2)
